--- a/src/editor/MainForm.form
+++ b/src/editor/MainForm.form
@@ -28,6 +28,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemExport">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Export translated file(s)"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemExportActionPerformed"/>
@@ -39,6 +40,7 @@
                   <KeyStroke key="Ctrl+S"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Save"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemSaveActionPerformed"/>
@@ -54,6 +56,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemCopySrc">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Copy source to target"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemCopySrcActionPerformed"/>
@@ -65,6 +68,7 @@
                   <KeyStroke key="Ctrl+ENTER"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Mark as translated"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemMarkTranslatedActionPerformed"/>
