--- a/src/editor/MainForm.form
+++ b/src/editor/MainForm.form
@@ -55,6 +55,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemCopySrc">
               <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Ctrl+INSERT"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Copy source to target"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
