--- a/src/editor/SegmentView.form
+++ b/src/editor/SegmentView.form
@@ -76,6 +76,7 @@
           <SubComponents>
             <Component class="editor.MarkupView" name="markupViewTarget">
               <Events>
+                <EventHandler event="caretUpdate" listener="javax.swing.event.CaretListener" parameters="javax.swing.event.CaretEvent" handler="markupViewTargetCaretUpdate"/>
                 <EventHandler event="focusGained" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="markupViewTargetFocusGained"/>
                 <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="markupViewTargetKeyPressed"/>
               </Events>
